Set operation scope details in the carbon context.